<resources>
    <string name="app_name">PayGes</string>
    <string name="caption">The world is quiet here</string>
    <string name="todo">TODO</string>
    <string name="login_cap">Login to explore more</string>
    <string name="welcome">Welcome,</string>
    <string name="uname">Enter your username</string>
    <string name="pwd">Password for login</string>
    <string name="login_now">Let\'s login</string>
    <string name="register">Create new account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="username">Username</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_to_login">Back to login</string>
    <string name="registration">Registration</string>
    <string name="for_registering_your_library_please_login_to_our_website">For registering your library,please login to our website</string>
    <string name="loading">Loading...</string>
    <string name="dashboard">Dashboard</string>
</resources>
