<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_splash"
    android:transitionName="mainAnim">

    <ImageView
        android:id="@+id/imgDP"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/user"
        android:alpha="0"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvLoad"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imgDP"
        app:layout_constraintEnd_toEndOf="@+id/imgDP"
        app:layout_constraintTop_toBottomOf="@+id/imgDP"
        android:text="@string/loading"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnim"
        android:layout_width="148dp"
        android:layout_height="148dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/imgDP"
        app:layout_constraintEnd_toEndOf="@+id/imgDP"
        app:layout_constraintBottom_toBottomOf="@+id/imgDP"
        app:layout_constraintTop_toTopOf="@+id/imgDP"
        app:lottie_rawRes="@raw/loading" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ip_mt"
            android:theme="@style/AppTheme..TextInputlayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ip_mt"
            android:theme="@style/AppTheme..TextInputlayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ip_mt"
            android:theme="@style/AppTheme..TextInputlayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ip_mt"
            android:theme="@style/AppTheme..TextInputlayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/colorPrimary"
            android:minHeight="56dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <!--    go back button-->
    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_register_btn"
        android:transitionName="cardRegisterAnim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/back_to_login"
            android:textColor="@color/white_80" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

