<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/ic_bg_splash"
    android:transitionName="mainAnim"
    tools:context=".MainActivity">


    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveTop"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/white"
        app:mwhColorAlpha="0.09"
        app:mwhGradientAngle="45"
        app:mwhProgress="1"
        app:mwhStartColor="@color/white"
        app:mwhVelocity="3"
        app:mwhWaves="
                70,25,1.4,1.4,-26
                100,5,1.4,1.2,15
                420,0,1.15,1,-10
                520,10,1.7,1.5,20
                220,0,1,1,-15" />

    <LinearLayout
        android:id="@+id/introLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:transitionName="introLayoutAnim"
        app:layout_constraintBottom_toBottomOf="@+id/waveDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/waveTop">

        <ImageView
            android:id="@+id/imgBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_book" />

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/caption"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveDown"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleY="-1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:mwhCloseColor="@color/white"
        app:mwhColorAlpha="0.09"
        app:mwhGradientAngle="90"
        app:mwhProgress="1"
        app:mwhStartColor="@color/white"
        app:mwhVelocity="3"
        app:mwhWaveHeight="36dp"
        app:mwhWaves="MultiWave" />


    <!--    form-->
    <ScrollView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/AppTheme..TextInputlayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uname"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:theme="@style/AppTheme..TextInputlayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:backgroundTint="@color/colorPrimary"
                android:minHeight="56dp"
                android:text="@string/login_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/cardRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/bg_register_btn"
        android:transitionName="cardRegisterAnim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@color/white_80" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>